<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".entry.LoginActivity">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageview_login_image"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/login_photo"/>

            <EditText
                    android:id="@+id/edittext_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/imageview_login_image"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/input"
                    android:padding="13dp"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="17dp"
                    android:layout_marginRight="17dp"
            />

            <EditText
                    android:id="@+id/edittext_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/edittext_login_email"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:background="@drawable/input"
                    android:padding="13dp"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="17dp"
                    android:layout_marginRight="17dp"
            />

            <TextView
                    android:id="@+id/textview_forget_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/edittext_login_password"
                    android:text="@string/forget_password"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="23dp"
                    android:textAlignment="textEnd"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
            />

            <Button
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textview_forget_password"
                    android:padding="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="19dp"
                    android:layout_marginRight="19dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    android:textColor="@android:color/background_light"
                    android:background="@drawable/button"
            />

            <TextView
                    android:id="@+id/textview_new_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/button_login"
                    android:text="@string/need_new_account"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="23dp"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
            />

            <TextView
                    android:id="@+id/textview_login_using"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/textview_new_account"
                    android:text="@string/or_login_using_your_phone"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="23dp"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    android:textStyle="bold"
            />

            <Button
                    android:id="@+id/button_phone_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textview_login_using"
                    android:padding="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="19dp"
                    android:layout_marginRight="19dp"
                    android:text="@string/phone"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    android:textColor="@android:color/background_light"
                    android:background="@drawable/button"
                    android:drawableStart="@drawable/ic_phone_android_black_24dp"
            />

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>