<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="entry.RegisterActivity">

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageview_register_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/login_photo"/>

    <EditText
            android:id="@+id/edittext_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageview_register_image"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/input"
            android:padding="14dp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
    />

    <EditText
            android:id="@+id/edittext_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edittext_register_email"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/input"
            android:padding="14dp"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
    />

    <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edittext_register_password"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="19dp"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textColor="@android:color/background_light"
            android:background="@drawable/button"
    />

    <TextView
            android:id="@+id/textview_already_have_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/register_button"
            android:text="@string/already_have_an_account"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="23dp"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
    />

</RelativeLayout>