<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".entry.PhoneLoginActivity">

    <EditText
            android:id="@+id/phone_input_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:layout_marginTop="180dp"
            android:background="@drawable/input"
            android:padding="8dp"
            android:hint="@string/enter_your_phone_number"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:drawableStart="@drawable/ic_phone_android_black_24dp"
            android:textAlignment="center"
            android:textStyle="bold"/>

    <EditText
            android:id="@+id/verification_number_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/input"
            android:padding="8dp"
            android:hint="@string/enter_verification_code"
            android:layout_below="@+id/phone_input_edittext"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:visibility="invisible"/>

    <Button
            android:id="@+id/verification_number_send_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_verification_code"
            android:textAllCaps="false"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/button"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_below="@id/verification_number_edittext"/>

    <Button
            android:id="@+id/verify_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/button"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_below="@id/verification_number_send_button"
            android:visibility="invisible"/>

</RelativeLayout>