<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/profile_activity"
        tools:context=".activity.ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/visit_profile_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="110dp"
            android:src="@drawable/ic_person_black_24dp"/>

    <TextView
            android:id="@+id/visit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_below="@+id/visit_profile_image"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"/>

    <TextView
            android:id="@+id/visit_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="hey there"
            android:layout_below="@+id/visit_username"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:textStyle="bold"/>

    <Button
            android:id="@+id/send_message_request_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/visit_status"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="65dp"
            android:layout_marginRight="65dp"
            android:textColor="@android:color/background_light"
            android:background="@drawable/button"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:text="@string/send_friend_request"/>

    <Button
            android:id="@+id/decline_message_request_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/send_message_request_button"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="65dp"
            android:layout_marginRight="65dp"
            android:textColor="@android:color/background_light"
            android:background="@drawable/button"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:visibility="invisible"
            android:text="@string/cancel_chat_request"/>

</RelativeLayout>